--- a/index.html
+++ b/index.html
@@ -16,5 +16,7 @@
   <a href="#">Personal Website</a>
   <a href="#">Personal Siteplan</a>
 </nav>
+
+<p> Gayle Davie - WDD130 </p>
 </body>
 </html>
