--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -130,7 +130,9 @@
 
     <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe" />
 
-    <h3>[Page 2]</h3>
+    <h3>FAQs</h3>
+
+    <img src="images/FAQ wireframe.png" al="faqs page wireframe" />
 
     <!-- <img src="#" alt="page 2 wireframe"> -->
   </main>
