--- a/bdaysite/site-plan.html
+++ b/bdaysite/site-plan.html
@@ -185,8 +185,10 @@
         [Written copy for the Page 2 here]
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="images/currumbin sactuary.jpeg" alt="currumbin" width="50%">
+        <img src="images/roarke-bucket-hat.jpg" alt="roarke" width="50%">
+        <img src="https://img.freepik.com/free-vector/boy-outdoor-outfit-doing-different-things_1308-69983.jpg?w=1060&t=st=1686462608~exp=1686463208~hmac=da05a5f647b57b7f8249be06d2cbaef565e4e3381d38680c385263adb00721a8" alt="costume" width="50%">
+        <img src="https://img.freepik.com/premium-vector/little-girl-dressed-jumpsuit-kigurumi-form-t-rex-girl-dinosaur-dragon-costume-with-hood-tail-cozy-tyrannosaurus-pajamas-cartoon-flat-vector-illustration-doodle-style_317038-1540.jpg?w=826" alt="costume 2" width="50%">
 
       
       <h3>Contact Us</h3>
@@ -194,8 +196,8 @@
         [Written copy for the Page 3 here]
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="images/roarke-pat-ankylosaurus.jpg" alt="image for page3" width="80%">
+        <img src="images/roarke-white-shirt.jpg" alt="image for page3" width="50%">
 
       
       <hr>
