--- a/bdaysite/site-plan.html
+++ b/bdaysite/site-plan.html
@@ -193,11 +193,18 @@
       
       <h3>Contact Us</h3>
       <p>
-        [Written copy for the Page 3 here]
+        We can't wait to eat cake and make more memories with you. Kindly RSVP before 10 July 2023 to help us accommodate everyone.<br>
+        If you have any food allergies or dietary restrictions, please let us know. We want to make sure everyone's taste buds are delighted! <br>
+        <br>
+        If you have any other questions that are not covered in our survival guide, please feel free to reach out to us. <br>
+        You can screech like a pterodactyl or send us an email to gayleandjesse@fakeemail.com.
+        <br>You can also reach us on 0403020100 (SMS preferred). <br>
+
+
       </p>
       <p>Images for the Page 3</p>
         <img src="images/roarke-pat-ankylosaurus.jpg" alt="image for page3" width="80%">
-        <img src="images/roarke-white-shirt.jpg" alt="image for page3" width="50%">
+        <img src="images/roarke-birthday.jpg" alt="image for page3" width="80%">
 
       
       <hr>
