cutting it close by i think it's done

--- a/bdaysite/site-plan.html
+++ b/bdaysite/site-plan.html
@@ -182,7 +182,32 @@
       
       <h3>The Party</h3>
       <p>
-        [Written copy for the Page 2 here]
+        Venue: <br>
+        With its perfect blend of nature, wildlife, and adventure, Currumbin Wildlife Sanctuary promises an unforgettable experience for visitors of all ages.<br>
+        There is a water park and a dinosaur trail so make sure to pack extra clothing! 
+        <br>
+        To get there, simply search Currumbin Wildlife Sanctuary on your maps. Located at  28 Tomewin St, Currumbin QLD 4223.
+        <br>
+        [embed google map]
+        <br><br>
+
+        Theme: <br>
+        Blend with the dinosaurs and stay safe by gearing up in a dinosaur costume, paleontologist, or park ranger outfit!<br>
+        Prizes in store for the best outfit. <br><br>
+
+        Treats: <br>
+        Our dino chefs will prepare tasty treats, cake, and drinks for carnivores and herbivores alike! We've got you covered. <br>
+        If you have allergies or dietary restrictions, please let us know when you RSVP. <br><br>
+
+        Gifts for a Cause: <br>
+        Join us in making a meaningful difference on Roarke's special day. Instead of traditional gifts, we invite you to share the joy by contributing to our donation box. Your generosity will directly support a local orphanage, 
+        bringing smiles to children who may not have the opportunity to celebrate their own birthdays.
+        <br>
+        Whether you choose to donate toys, books, clothing, or make a monetary contribution, your gift will create a lasting impact in their lives. 
+        Let's spread the spirit of kindness and make this birthday celebration a source of joy for those who truly need it. 
+        Together, we can make a difference and create unforgettable memories of giving.
+
+    
       </p>
       <p>Images for the Page 2</p>
         <img src="images/currumbin sactuary.jpeg" alt="currumbin" width="50%">
