--- a/bdaysite/site-plan.html
+++ b/bdaysite/site-plan.html
@@ -209,7 +209,7 @@
 
     
       </p>
-      <p>Images for the Page 2</p>
+      <p>Images for The Party</p>
         <img src="images/currumbin sactuary.jpeg" alt="currumbin" width="50%">
         <img src="images/roarke-bucket-hat.jpg" alt="roarke" width="50%">
         <img src="https://img.freepik.com/free-vector/boy-outdoor-outfit-doing-different-things_1308-69983.jpg?w=1060&t=st=1686462608~exp=1686463208~hmac=da05a5f647b57b7f8249be06d2cbaef565e4e3381d38680c385263adb00721a8" alt="costume" width="50%">
@@ -227,7 +227,7 @@
 
 
       </p>
-      <p>Images for the Page 3</p>
+      <p>Images for Contact Us</p>
         <img src="images/roarke-pat-ankylosaurus.jpg" alt="image for page3" width="80%">
         <img src="images/roarke-birthday.jpg" alt="image for page3" width="80%">
 
