--- a/bdaysite/site-plan.html
+++ b/bdaysite/site-plan.html
@@ -142,7 +142,7 @@
         [insert RSVP button]
         <br><br>
         Curious about the party's secret location, what thrilling adventures await, what to wear to be dinosaur safe, and what to pack?
-        <br>Look no further! Checkout our Party Survival Guide for a roaring good time. <br>
+        <br>Look no further! Checkout our Party Survival Guide to prepare for a roaring good time. <br>
         [insert The Party redirect button]<br><br>
 
         [insert a slideshow with Roarke's photos and fun facts on a separate section before footer]<br>
