--- a/bdaysite/site-plan.html
+++ b/bdaysite/site-plan.html
@@ -200,7 +200,7 @@
         If you have allergies or dietary restrictions, please let us know when you RSVP. <br><br>
 
         Gifts for a Cause: <br>
-        Join us in making a meaningful difference on Roarke's special day. Instead of traditional gifts, we invite you to share the joy by contributing to our donation box. Your generosity will directly support a local orphanage, 
+        Join us in making a meaningful difference on Roarke's special day. Instead of traditional gifts, we invite you to share the joy by contributing to our donation box. Your generosity will directly support a local children's residential group home, 
         bringing smiles to children who may not have the opportunity to celebrate their own birthdays.
         <br>
         Whether you choose to donate toys, books, clothing, or make a monetary contribution, your gift will create a lasting impact in their lives. 
