--- a/wwr/index.html
+++ b/wwr/index.html
@@ -15,9 +15,9 @@
             </a>
             <nav>
                 <a href="index.html">Home</a>
-                <a href="#">Page 2</a>
+                <a href="faqs.html">FAQs</a>
                 <a href="site-plan-rafting.html">Site Plan</a>
-                <a href="contactus.html">Contact Us</a>
+                <a href="#">Contact Us</a>
             </nav>
         </header>
         <div id="hero">
@@ -28,7 +28,7 @@
                 <h1 class="home-title">Have a one-of-a-kind Thrill & Chill Escapade</h1>
                 <h4>Create Memorable Moments with Koda Raft Adventures!</h4>
                 <div class="button-box">
-                    <a class="book" href="contactus.html">Book Now</a>
+                    <a class="book" href="#">Book Now</a>
                 </div>
             </section>
         </div>
@@ -59,7 +59,7 @@
         <footer>
             <p>Koda Raft Adventures &copy; 2023 - Gayle Davie</p>
             <p><a href="site-plan-rafting.html">Site Plan</a></p>
-            <p><a href="contactus.html">Contact Us</a></p>
+            <p><a href="#">Contact Us</a></p>
             <div class="social">
                 <a href="https://facebook.com" target="_blank">
                     <img src="images/facebook.png" alt="fb icon">
