--- a/bdaysite/site-plan.html
+++ b/bdaysite/site-plan.html
@@ -138,8 +138,8 @@
         Save the date:
         <br>
         22 July 2023, Saturday @ 2 PM AEST <br>
-        [insert countdown timer]<br>
-        [insert RSVP button]
+        <script src="https://cdn.logwork.com/widget/countdown.js"></script>
+        <a href="https://logwork.com/countdown-zdm6" class="countdown-timer" data-style="columns" data-timezone="Australia/Brisbane" data-textcolor="#eca150" data-date="2023-07-22 14:00" data-digitscolor="#82ab61" data-unitscolor="#e89f4c">see you in</a>
         <br><br>
         Curious about the party's secret location, what thrilling adventures await, what to wear to be dinosaur safe, and what to pack?
         <br>Look no further! Checkout our Party Survival Guide to prepare for a roaring good time. <br>
