--- a/wwr/faqs.html
+++ b/wwr/faqs.html
@@ -16,7 +16,7 @@
             <nav>
                 <a href="index.html">Home</a>
                 <a href="site-plan-rafting.html">Site Plan</a>
-                <a href="#">Contact Us</a>
+                <a href="contactus.html">Contact Us</a>
             </nav>
         </header>
         <div id="faq_hero">
@@ -27,7 +27,7 @@
         <ul class="accordion">
             <li class="light">
                 <input type ="radio" name="accordion" id="faq1" checked>
-                <label for="faq1">Is this a good trip for kids? What are the age ranges you allow?</label>
+                <label class="faqs-label" for="faq1">Is this a good trip for kids? What are the age ranges you allow?</label>
                 <div class="faq_content">
                     <p>Absolutely! This is a good trip for children of all ages. We have found, however, that children over the age of 8 seem to enjoy it more overall 
                         (And parents especially enjoy it more if their children are all over 8). A common concern we get from parents is that their children will be 
@@ -39,7 +39,7 @@
             </li>
             <li class="dark">
                 <input type ="radio" name="accordion" id="faq2">
-                <label for="faq2">Is whitewater rafting safe? I don't even know how to swim! Can I still come?</label>
+                <label class="faqs-label" for="faq2">Is whitewater rafting safe? I don't even know how to swim! Can I still come?</label>
                 <div class="faq_content">
                     <p>As with all adventure sports, there is an inherent and assumed element of risk. To help ensure your safety, our guides are all certified in Wilderness First aid and all start with 
                         at least 3 years of rafting experience. The most common injuries are sunburns and injuries that occur on land. <br><br>
@@ -50,7 +50,7 @@
             </li>
             <li class="light">
                 <input type ="radio" name="accordion" id="faq3">
-                <label for="faq3">What is included in the trip?</label>
+                <label class="faqs-label" for="faq3">What is included in the trip?</label>
                 <div class="faq_content">
                     <p>We will provide all necessary camping equipment. This includes a sleeping bag, foam pad, waterproof duffle bag, small waterproof day bag,
                         tent and a cot, eating utensils and camping chair. <br><br>
@@ -61,7 +61,7 @@
             </li>
             <li class="dark">
                 <input type ="radio" name="accordion" id="faq4">
-                <label for="faq4">What do I need to bring?</label>
+                <label class="faqs-label" for="faq4">What do I need to bring?</label>
                 <div class="faq_content">
                     <p>To effectively plan for temperature and weather changes in the Canyon, it's important to be prepared for both hot and dry conditions as well as cold and wet conditions. Here are some recommended clothing and items to consider:</p>
                         <p>Clothing:</p>
@@ -116,7 +116,7 @@
             </li>
             <li class="light">
                 <input type ="radio" name="accordion" id="faq5">
-                <label for="faq5">What is so great about whitewater rafting anyway?</label>
+                <label class="faqs-label" for="faq5">What is so great about whitewater rafting anyway?</label>
                 <div class="faq_content">
                     <p>Everything! What's not to love about whitewater rafting? Let's dive into a typical day on the river. <br><br>
 
@@ -136,7 +136,7 @@
             </li>
             <li class="dark">
                 <input type ="radio" name="accordion" id="faq6">
-                <label for="faq6">How far in advance should I book my trip?</label>
+                <label class="faqs-label" for="faq6">How far in advance should I book my trip?</label>
                 <div class="faq_content">
                     <p>If you have specific dates you need, we recommend booking a year in advance. If you can be more flexible, 6 months in advance is usually sufficient.
                     </p>
@@ -150,7 +150,7 @@
             <section class="additional-faqs">
                 <h2>Couldn't find what you were looking for?</h2>
                 <p>If you have other questions or concerns, don't hesitate to reach out. Send an enquiry, or give us a call!</p>
-                <a class='get-in-touch' href="#">Get in Touch</a>
+                <a class='get-in-touch' href="contactus.html">Get in Touch</a>
             </section>
         </div>
         
@@ -159,7 +159,7 @@
         <footer>
             <p>Koda Raft Adventures &copy; 2023 - Gayle Davie</p>
             <p><a href="site-plan-rafting.html">Site Plan</a></p>
-            <p><a href="#">Contact Us</a></p>
+            <p><a href="contactus.html">Contact Us</a></p>
             <div class="social">
                 <a href="https://facebook.com" target="_blank">
                     <img src="images/facebook.png" alt="fb icon">
