--- a/bdaysite/index.html
+++ b/bdaysite/index.html
@@ -5,18 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Roarke Is Three Birthday Party | Home </title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <div id="content">
         <header>
             <a id="logo_link" href="index.html">
                 <img class="logo" src="images/Roarke-is-Three-1-white.jpg" alt ="Roarke is three logo">
-                </a>
-                <nav>
-                    <a href="index.html">Home</a>
-                    <a href="party.html">The Party</a>
-                    <a href="contactus.html">Contact Us</a>
-                </nav>
+            </a>
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="party.html">The Party</a>
+                <a href="contactus.html">Contact Us</a>
+            </nav>
         </header>
         <div id="hero">
             <div id="hero-box">
@@ -24,7 +25,8 @@
             </div>
             <section id="hero-msg">
                 <h1 class="home-title">You are Invited!</h1>
-                <h3>Save the date: <br>22 July 2023, Saturday @ 2 PM AEST</h3>
+                <h3>Save the date:</h3>
+                <h2>22 July 2023, Saturday @ 2 PM AEST</h2>
                 <script src="https://cdn.logwork.com/widget/countdown.js"></script>
                 <a href="https://logwork.com/countdown-zdm6" class="countdown-timer" data-style="columns" data-timezone="Australia/Brisbane" data-textcolor="#eca150" data-date="2023-07-22 14:00" data-digitscolor="#82ab61" data-unitscolor="#e89f4c">see you in</a>
             </section>
@@ -39,56 +41,92 @@
             </section> 
             <section id="intro-party">
                 <img class="thumbs-up" src="images/roarke-dino-thumbs-up.jpg" alt="Roarke thumbs up">
-                <h2>Curious about the party's secret location, what thrilling adventures await, what to wear to be dinosaur safe, and what to pack?
-                    Checkout our Party Survival Guide to prepare for a roaring good time!</h2>
-                <a class="party-button" href="party.html">Party Info</a>
+                <div id ="party-msg">
+                    <h2>Curious about the party's secret location, what thrilling adventures await, what to wear to be dinosaur safe, and what to pack?
+                        Checkout our Party Survival Guide to prepare for a roaring good time!</h2>
+                    <a class="party-button" href="party.html">Party Info</a>
+                </div>
             </section>
-            <div class="background"></div>
+            <div class="background-2"></div>
             <section id="slideshow">
-                <div class="fact1">
-                    <img class="fact-img" src="images/roarke-trex.jpg" alt ="Roarke trex">
-                    <p>His favorite dinosaur is T-rex! He has a a collection of T-rex toys he calls T-rex family.</p>
-                </div>
-                <div class="fact2">
-                    <img class="fact-img" src="images/roarke-spidey.jpg" alt ="Roarke spiderman">
-                    <p>Other than dinosaurs, he loves Marvel Superheroes! He learned their names before his ABCs.</p>
-                </div>
-                <div class="fact3">
-                    <img class="fact-img" src="images/roarke-seaweed.jpg" alt ="Roarke seaweed">
-                    <p>His favourite food is seaweed-wrapped rice with ketchup!</p>
-                </div>
-                <div class="fact4">
-                    <img class="fact-img" src="images/roarke-wild-and-free.jpg" alt ="Roarke black shirt">
-                    <p>He wants a pet cow. Not a baby cow, but a big cow he can ride!</p>
-                </div>
-                <div class="fact5">
-                    <img class="fact-img" src="images/roarke-cap.jpg" alt ="Roarke cap">
-                    <p>He wakes up at 5:30 am every day and makes sure the whole household knows. Who needs an alarm clock when you have Roarke?</p>
-                </div>
-                <div class="fact6">
-                    <img class="fact-img" src="images/roarke-guitar.jpg" alt ="Roarke guitar">
-                    <p>He loves music and will try any instrument. He has previously tried to climb up a stage to take a performer's guitar.</p>
-                </div>
+                <div class="slider">
+                    <input type="radio" name="slider" id="slide1" checked>
+                    <input type="radio" name="slider" id="slide2" checked>   
+                    <input type="radio" name="slider" id="slide3" checked>   
+                    <input type="radio" name="slider" id="slide4" checked>   
+                    <input type="radio" name="slider" id="slide5" checked>   
+                    <input type="radio" name="slider" id="slide6" checked>       
+                    <div id="slides">
+                        <div id="overflow">
+                            <div class="inner">
+                                <div class="slide slide_1">
+                                    <div class="slide-content">
+                                        <img class="fact-img" src="images/roarke-trex.jpg" alt ="Roarke trex">
+                                        <p>His favorite dinosaur is T-rex! He has a a collection of T-rex toys he calls T-rex family.</p>
+                                    </div>
+                                </div>
+                                <div class="slide slide_2">
+                                    <div class="slide-content">
+                                        <img class="fact-img" src="images/roarke-spidey.jpg" alt ="Roarke spiderman">
+                                        <p>Other than dinosaurs, he loves Marvel Superheroes! He learned their names before his ABCs.</p>
+                                    </div>
+                                </div>
+                                <div class="slide slide_3">
+                                    <div class="slide-content">
+                                        <img class="fact-img" src="images/roarke-seaweed.jpg" alt ="Roarke seaweed">
+                                        <p>His favourite food is seaweed-wrapped rice with ketchup!</p>
+                                    </div>
+                                </div>
+                                <div class="slide slide_4">
+                                    <div class="slide-content">
+                                        <img class="fact-img" src="images/roarke-wild-and-free.jpg" alt ="Roarke black shirt">
+                                        <p>He wants a pet cow. Not a baby cow, but a big cow he can ride!</p>
+                                    </div>
+                                </div>
+                                <div class="slide slide_5">
+                                    <div class="slide-content">
+                                        <img class="fact-img" src="images/roarke-cap.jpg" alt ="Roarke cap">
+                                        <p>He wakes up at 5:30 am every day and makes sure the whole household knows. Who needs an alarm clock when you have Roarke?</p>
+                                    </div>
+                                </div>
+                                <div class="slide slide_6">
+                                    <div class="slide-content">
+                                        <img class="fact-img" src="images/roarke-guitar.jpg" alt ="Roarke guitar">
+                                        <p>He loves music and will try any instrument. He has previously tried to climb up a stage to take a performer's guitar.</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="controls">
+                        <label for="slide1"></label>
+                        <label for="slide2"></label>
+                        <label for="slide3"></label>
+                        <label for="slide4"></label>
+                        <label for="slide5"></label>
+                        <label for="slide6"></label>
+                     </div>
+                </div>    
             </section>  
         </main>
         <footer>
             <div id="footer-box">
                 <img id="footer-bg" src="images/footer.png" alt="footer background">
-                <p>Roarke is Three &copy; 2023 - Gayle Davie</p>
-                <div class="social">
-                    <a href="https://facebook.com" target="_blank">
-                        <img src="images/facebook.png" alt="fb icon">
-                    </a>
-                    <a href="https://twitter.com" target="_blank">
-                        <img src="images/twitter.png" alt="twitter icon">
-                    </a>
-                    <a href="https://instagram.com" target="_blank">
-                        <img src="images/instagram.png" alt="instagram icon">
-                    </a>
-                </div>
-                <p><a href="site-plan.html">Site Plan</a></p>
-                <p><a href="contactus.html">Contact Us</a></p>
             </div>
+            <p id="copyright">Roarke is Three &copy; 2023 - Gayle Davie</p>
+            <div class="social">
+                <a href="https://facebook.com" target="_blank">
+                    <img src="images/facebook.png" alt="fb icon">
+                </a>
+                <a href="https://twitter.com" target="_blank">
+                    <img src="images/twitter.png" alt="twitter icon">
+                </a>
+                <a href="https://instagram.com" target="_blank">
+                    <img src="images/instagram.png" alt="instagram icon">
+                </a>
+            </div>
+            <p id="plan-link"><a href="site-plan.html">Site Plan</a></p>
+            <p id="contact-link"><a href="contactus.html">Contact Us</a></p>
         </footer>
     </div>
 </body>
