it's coming together

--- a/bdaysite/index.html
+++ b/bdaysite/index.html
@@ -40,12 +40,13 @@
                 <a class="rsvp-button" href="contactus.html">RSVP</a>
             </section> 
             <section id="intro-party">
-                <img class="thumbs-up" src="images/roarke-dino-thumbs-up.jpg" alt="Roarke thumbs up">
                 <div id ="party-msg">
-                    <h2>Curious about the party's secret location, what thrilling adventures await, what to wear to be dinosaur safe, and what to pack?
-                        Checkout our Party Survival Guide to prepare for a roaring good time!</h2>
+                    <h2>Party Survival Guide</h2>
+                    <h4>Curious about the party's secret location, what thrilling adventures await, what to wear to be dinosaur safe, and what to pack?
+                        Checkout our Party Survival Guide to prepare for a roaring good time!</h4>
                     <a class="party-button" href="party.html">Party Info</a>
                 </div>
+                <img class="thumbs-up" src="images/roarke-dino-thumbs-up.jpg" alt="Roarke thumbs up">
             </section>
             <div class="background-2"></div>
             <section id="slideshow">
