--- a/bdaysite/party.html
+++ b/bdaysite/party.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Roarke Is Three Birthday Party | The Party </title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <div id="content">
@@ -51,21 +52,21 @@
         <footer>
             <div id="footer-box">
                 <img id="footer-bg" src="images/footer.png" alt="footer background">
-                <p>Roarke is Three &copy; 2023 - Gayle Davie</p>
-                <div class="social">
-                    <a href="https://facebook.com" target="_blank">
-                        <img src="images/facebook.png" alt="fb icon">
-                    </a>
-                    <a href="https://twitter.com" target="_blank">
-                        <img src="images/twitter.png" alt="twitter icon">
-                    </a>
-                    <a href="https://instagram.com" target="_blank">
-                        <img src="images/instagram.png" alt="instagram icon">
-                    </a>
-                </div>
-                <p><a href="site-plan.html">Site Plan</a></p>
-                <p><a href="contactus.html">Contact Us</a></p>
             </div>
+            <p id="copyright">Roarke is Three &copy; 2023 - Gayle Davie</p>
+            <div class="social">
+                <a href="https://facebook.com" target="_blank">
+                    <img src="images/facebook.png" alt="fb icon">
+                </a>
+                <a href="https://twitter.com" target="_blank">
+                    <img src="images/twitter.png" alt="twitter icon">
+                </a>
+                <a href="https://instagram.com" target="_blank">
+                    <img src="images/instagram.png" alt="instagram icon">
+                </a>
+            </div>
+            <p id="plan-link"><a href="site-plan.html">Site Plan</a></p>
+            <p id="contact-link"><a href="contactus.html">Contact Us</a></p>
         </footer>
     </div>
 </body>
