--- a/bdaysite/index.html
+++ b/bdaysite/index.html
@@ -49,66 +49,30 @@
                 <img class="thumbs-up" src="images/roarke-dino-thumbs-up.jpg" alt="Roarke thumbs up">
             </section>
             <div class="background-2"></div>
-            <section id="slideshow">
-                <div class="slider">
-                    <input type="radio" name="slider" id="slide1" checked>
-                    <input type="radio" name="slider" id="slide2" checked>   
-                    <input type="radio" name="slider" id="slide3" checked>   
-                    <input type="radio" name="slider" id="slide4" checked>   
-                    <input type="radio" name="slider" id="slide5" checked>   
-                    <input type="radio" name="slider" id="slide6" checked>       
-                    <div id="slides">
-                        <div id="overflow">
-                            <div class="inner">
-                                <div class="slide slide_1">
-                                    <div class="slide-content">
-                                        <img class="fact-img" src="images/roarke-trex.jpg" alt ="Roarke trex">
-                                        <p>His favorite dinosaur is T-rex! He has a a collection of T-rex toys he calls T-rex family.</p>
-                                    </div>
-                                </div>
-                                <div class="slide slide_2">
-                                    <div class="slide-content">
-                                        <img class="fact-img" src="images/roarke-spidey.jpg" alt ="Roarke spiderman">
-                                        <p>Other than dinosaurs, he loves Marvel Superheroes! He learned their names before his ABCs.</p>
-                                    </div>
-                                </div>
-                                <div class="slide slide_3">
-                                    <div class="slide-content">
-                                        <img class="fact-img" src="images/roarke-seaweed.jpg" alt ="Roarke seaweed">
-                                        <p>His favourite food is seaweed-wrapped rice with ketchup!</p>
-                                    </div>
-                                </div>
-                                <div class="slide slide_4">
-                                    <div class="slide-content">
-                                        <img class="fact-img" src="images/roarke-wild-and-free.jpg" alt ="Roarke black shirt">
-                                        <p>He wants a pet cow. Not a baby cow, but a big cow he can ride!</p>
-                                    </div>
-                                </div>
-                                <div class="slide slide_5">
-                                    <div class="slide-content">
-                                        <img class="fact-img" src="images/roarke-cap.jpg" alt ="Roarke cap">
-                                        <p>He wakes up at 5:30 am every day and makes sure the whole household knows. Who needs an alarm clock when you have Roarke?</p>
-                                    </div>
-                                </div>
-                                <div class="slide slide_6">
-                                    <div class="slide-content">
-                                        <img class="fact-img" src="images/roarke-guitar.jpg" alt ="Roarke guitar">
-                                        <p>He loves music and will try any instrument. He has previously tried to climb up a stage to take a performer's guitar.</p>
-                                    </div>
-                                </div>
-                            </div>
+            <div id="slideshow">
+                <div id="slide-show">
+                    <div class="slide-wrapper">
+                        <div class="slide">
+                            <img class="fact-img" src="images/fact-1.png" alt="fact-photo">
+                        </div>
+                        <div class="slide">
+                            <img class="fact-img" src="images/fact2.png" alt="fact-photo2">
+                        </div>
+                        <div class="slide">
+                            <img class="fact-img" src="images/fact3.png" alt="fact-photo3">
+                        </div>
+                        <div class="slide">
+                            <img class="fact-img" src="images/fact4.png" alt="fact-photo4">
+                        </div>
+                        <div class="slide">
+                            <img class="fact-img" src="images/fact5.png" alt="fact-photo5">
+                        </div>
+                        <div class="slide">
+                            <img class="fact-img" src="images/fact6.png" alt="fact-photo6">
                         </div>
                     </div>
-                    <div id="controls">
-                        <label for="slide1"></label>
-                        <label for="slide2"></label>
-                        <label for="slide3"></label>
-                        <label for="slide4"></label>
-                        <label for="slide5"></label>
-                        <label for="slide6"></label>
-                     </div>
-                </div>    
-            </section>  
+                </div>
+            </div>  
         </main>
         <footer>
             <div id="footer-box">
