--- a/bdaysite/site-plan.html
+++ b/bdaysite/site-plan.html
@@ -53,9 +53,9 @@
 
 
       <table class="colors">
-        <tr><th>Primary</th><th>Secondary</th><th>Accent 1</th><th>Accent 2</th></tr>
+        <tr><th>Primary</th><th>Secondary</th><th>Accent 1</th><th>Accent 2</th><th>Accent 3</th><th>Accent 4</th><th>Accent 5</th></tr>
         <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
-        <tr><td class="primary">[#AEC542]</td><td class="secondary">[#ECA150]</td><td class="accent1">[#88AAB6]</td><td class="accent2">[#82AB61]</td></tr>
+        <tr><td class="primary">[#AEC542]</td><td class="secondary">[#ECA150]</td><td class="accent1">[#88AAB6]</td><td class="accent2">[#82AB61]</td><td class="accent3">[#747978]</td><td class="accent4">[#EEF9E7]</td><td class="accent5">[#E4EDDE]</td></tr>
       </table>
 
       <!-- ------------------------Step 9------------------------------ -->
