--- a/bdaysite/site-plan.html
+++ b/bdaysite/site-plan.html
@@ -220,12 +220,11 @@
       
       <h3>Contact Us</h3>
       <p>
-        We can't wait to eat cake and make more memories with you. Kindly RSVP before 10 July 2023 to help us accommodate everyone.<br>
+        We can't wait to eat cake and make more memories with you. Kindly RSVP before 10 July 2023 through the below communication channels to help us accommodate everyone.<br>
         If you have any food allergies or dietary restrictions, please let us know. We want to make sure everyone's taste buds are delighted! <br>
         <br>
         If you have any other questions that are not covered in our survival guide, please feel free to reach out to us. <br>
-        You can screech like a pterodactyl or send us an email to gayleandjesse@fakeemail.com.
-        <br>You can also reach us on 0403020100 (SMS preferred). <br>
+        Screech like a pterodactyl or send us an email to gayleandjesse@fakeemail.com or Call or Message us (preferred) on 0403020100
 
 
       </p>
@@ -245,7 +244,7 @@
 
       <h3>Home</h3>
       <p>         
-        Two homepage wireframe shows how slideshow elements alternate position when it slides. <br>
+        Two homepage wireframe shows how slideshow elements alternate position when it slides. Animation is paused when you hover over it. <br>
         I also made a footer background image.
       </p>
       <img src="images/HomePage.jpg" alt="home page wireframe" width="50%">
@@ -257,6 +256,8 @@
       <img src="images/theparty.jpg" alt="the party wireframe" width="50%">
 
       <h3>Contact Us</h3>
+      
+      <p>Hover effect on the RSVP section will make the image opaque and the RSVP heading bounce. The images for contact methods will also bounce when you hover over it</p>
       <img src="images/contactus.jpg" alt="contact us wireframe" width="50%">
     </main>
   </body>
