site plan update

--- a/bdaysite/site-plan.html
+++ b/bdaysite/site-plan.html
@@ -245,7 +245,7 @@
       <h3>Home</h3>
       <p>         
         Two homepage wireframe shows how slideshow elements alternate position when it slides. Animation is paused when you hover over it. <br>
-        I also made a footer background image.
+        I also made a footer background image. Animation is also added so that title on the hero image will bounce on hover.
       </p>
       <img src="images/HomePage.jpg" alt="home page wireframe" width="50%">
 
